fix: overflow body

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,4 +91,10 @@
   .pdfViewer, .react-pdf__Page, .react-pdf__Page__canvas, .pdf-js-canvas {
     background-color: transparent !important;
   }
+
+  html, body {
+    height: 100%;
+    overflow: auto;
+    background: #262626; /* match your viewer background */
+  }
 }
